resolve dthe alignment of the display and search form

--- a/KAL-Weather-App-Team2/src/styles.css
+++ b/KAL-Weather-App-Team2/src/styles.css
@@ -1,13 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
-html{
-    height:100%;
-}
+
 body{
     background:url('https://i.ytimg.com/vi/j9nhecEWMuE/maxresdefault.jpg');
     font-family: Arial, Helvetica, sans-serif;
     font-style: oblique;
+    margin:0px;
 }
 .mat-toolbar{
     place-content:center;
@@ -23,7 +22,6 @@ body{
 .card-class{
     place-content: center;
     margin-left:25%;
-    margin-top:10%; 
 }
 .image-class{
     font-size: 20%;
